<resources>
    <string name="app_name">大麦段子</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tt_tab_activity">TTTabActivity</string>
    <string name="tab_bar_duanzi">段子</string>
    <string name="tab_bar_image">图片</string>
    <string name="tab_bar_mine">我的</string>
    <string name="tab_bar_more">设置</string>
    <string name="hello_tabone">hello tab!</string>
    <string name="ActionBar_back">返回</string>
    <string name="ActionBar_Submit">提交</string>
    <string name="duanzi_recommend">推荐</string>
    <string name="duanzi_new">最新</string>
    <string name="duanzi_hot">热门</string>
    <string name="duanzi_essence">精华</string>
    <string name="duanzi_comment">期待你的神评论</string>
    <string name="duanzi_report">举报</string>
    <string name="duanzi_comment_title">我要评论</string>
    <string name="duanzi_comment_zhuanfa">转发到</string>
    <string name="comment_write">如果不想转发，请不要勾选下方图标</string>
    <string name="duanzi_more_zhuanfa">转发</string>
    <string name="duanzi_more_report">举报</string>
    <string name="duanzi_more_copy">复制</string>
    <string name="duanzi_more_fav">收藏</string>
    <string name="duanzi_more_back">取消</string>
    <string name="duanzi_share">分享到</string>
    <string name="duanzi_add_1">+1</string>
    <string name="my_write">我要投稿</string>
    <string name="my_check">我要审核</string>
    <string name="my_publish">我的投稿</string>
    <string name="my_comment">我的评论</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_app">热门应用</string>
    <string name="my_activity">热门活动</string>
    <string name="my_nemo">待定</string>
    <string name="my_feedback">我要反馈</string>
    <string name="my_message">我的消息</string>
    <string name="my_zhuanfa">转发到:</string>
    <string name="my_write_hint">请输入内容，字数不超过140字</string>
    <string name="my_trash">垃圾</string>
    <string name="my_sexy">色情</string>
    <string name="my_neihan">内涵</string>
    <string name="my_boring">无聊</string>
    <string name="my_skip">跳过</string>
    <string name="my_choice">选择图片</string>
    <string name="my_homepage">主页</string>
    <string name="my_tencent_wb_unbind">腾讯微博[未绑定]</string>
    <string name="my_tencent_wb_binded">腾讯微博[已绑定]</string>
    <string name="my_sina_unbind">新浪微博[未绑定]</string>
    <string name="my_sina_binded">新浪微博[已绑定]</string>
    <string name="my_renren_unbind">人人网[未绑定]</string>
    <string name="my_renren_binged">人人网[已绑定]</string>
    <string name="my_douban_unbind">豆瓣网[未绑定]</string>
    <string name="my_douban_binged">豆瓣网[已绑定]</string>
    <string name="my_fav_title">收藏</string>
    <string name="my_comment_title">评论</string>
    <string name="my_pub_title">投稿</string>
    <string name="my_unregister">注销账号</string>
    <string name="my_edit">账号管理</string>
    <string name="my_icon">头像</string>
    <string name="my_name">昵称</string>
    <string name="my_signature">签名</string>
    <string name="my_edit_sex">性别</string>
    <string name="my_address">地址</string>
    <string name="my_remove_name">修改用户名</string>
    <string name="my_remove_signature">修改签名</string>
    <string name="my_remove_icon">(点击更换头像)</string>
    <string name="sina">新浪</string>
    <string name="tencent">腾讯</string>
    <string name="weixin">微信</string>
    <string name="weixin_circle">朋友圈</string>
    <string name="QQ">QQ</string>
    <string name="QQ_Zone">QQ空间</string>
    <string name="renren">人人网</string>
    <string name="douban">豆瓣网</string>
    <string name="note_Comment">评论数为0</string>
    <string name="note_Fav">收藏数为0</string>
    <string name="note_Pub">帖子数位0</string>
	<string name="write_editNotNull">你编写的内容尚未提交,是否离开？</string>
	<string name="write_confrim">确定</string>
	<string name="write_cancel">取消</string>
    <string name="num">1111</string>
    <string name="duanzi_test">与原Activity中的Layout分块化,VCBase的分块化道理相同
灵活准确的生命周期去管理当前View的状态记录以及横竖屏处理
Fragment管理的View,可同时使用在Phone和Pad上,一份代码两份机器,可重用性高
Is a View, More than View
可以从startActivityForResult中接收到返回结果,但是View不能
唯一Id标识,可以从FragmentManager中获取id对应的Fragment与其说是Fragment的缺点,不如说是每个应用程序模块之间的通讯都面临地耦合问题
Fragment之间的通讯依赖Activity使用接口管理并通知
如何解决模块之间的通讯的耦合问题
1.使用接口,让Activity扮演管理角色,负责分发消息到该窗口的子View
该方案的缺点
不方便使用单元测试
随着应用功能的增加,需要监听的事件越来越多,导致越来越多的接口声明以及绑定
2.使用LocalBroadcastManager + Inten</string>
    <string name="my_Test">adding and removing Fragment可以做动画的效果,平滑过度
自动化堆栈管理,所以返回键可以删除动态添加的Fragment,最后销毁Activity,无需做过多判断
集成ActionBar的标签,可以替代TabHost,ActivityGrounp,与谷歌设计风格紧密结合</string>
    <string name="more_text_font">字体大小</string>
    <string name="radio_font_size_l">小</string>
    <string name="radio_font_size_n">中</string>
    <string name="radio_font_size_b">大</string>
    <string name="radio_image_size_l">小图</string>
    <string name="radio_image_size_n">中图</string>
    <string name="radio_image_size_b">大图</string>
    <string name="more_text_recommend">推荐给朋友</string>
    <string name="more_text_feedback">用户反馈</string>
    <string name="more_text_update">检查新版本</string>
    <string name="more_text_now_version">当前版本</string>
    <string name="more_text_zhuanfa">收藏同时转发</string>
    <string name="more_text_bookmarker">保存浏览进度</string>
    <string name="more_text_dark">夜间模式</string>
    <string name="more_text_net">2G/3G图片显示模式</string>
    <string name="more_text_push">精彩段子推送</string>
    <string name="more_text_cache">清除缓存</string>
    <string name="more_text_contact">联系我们</string>
    <string name="more_text_help">帮助</string>
    <string name="more_suggest">意见反馈</string>
    <string name="more_Mysuggest">我的意见</string>
    <string name="more_common">常见问题</string>
    <string-array name="province_item">
        <item>北京</item>
        <item>上海</item>
        <item>广东</item>
        <item>山西</item>
        <item>内蒙古</item>
        <item>辽宁</item>
        <item>吉林</item>
        <item>黑龙江</item>
        <item>天津</item>
        <item>江苏</item>
        <item>浙江</item>
        <item>安徽</item>
        <item>福建</item>
        <item>江西</item>
        <item>山东</item>
        <item>河南</item>
        <item>湖北</item>
        <item>湖南</item>
        <item>河北</item>
        <item>广西</item>
        <item>海南</item>
        <item>重庆</item>
        <item>四川</item>
        <item>贵州</item>
        <item>云南</item>
        <item>西藏</item>
        <item>陕西</item>
        <item>甘肃</item>
        <item>青海</item>
        <item>宁夏</item>
        <item>新疆</item>
        <item>香港</item>
        <item>澳门</item>
        <item>台湾</item>
    </string-array>
    <string-array name="beijin_province_item">
        <item>北京</item>
    </string-array>
    <string-array name="tianjin_province_item">
        <item>天津</item>
    </string-array>
    <string-array name="heibei_province_item">
        <item>石家庄</item>
        <item>唐山</item>
        <item>秦皇岛</item>
        <item>邯郸</item>
        <item>邢台</item>
        <item>保定</item>
        <item>张家口</item>
        <item>承德</item>
        <item>沧州</item>
        <item>廊坊</item>
        <item>衡水</item>
    </string-array>
    <string-array name="shanxi1_province_item">
        <item>太原</item>
        <item>大同</item>
        <item>阳泉</item>
        <item>长治</item>
        <item>晋城</item>
        <item>朔州</item>
        <item>晋中</item>
        <item>运城</item>
        <item>忻州</item>
        <item>临汾</item>
        <item>吕梁</item>
    </string-array>
    <string-array name="neimenggu_province_item">
        <item>呼和浩特</item>
        <item>包头</item>
        <item>乌海</item>
        <item>赤峰</item>
        <item>通辽</item>
        <item>鄂尔多斯</item>
        <item>呼伦贝尔</item>
        <item>巴彦淖尔</item>
        <item>乌兰察布</item>
        <item>兴安盟</item>
        <item>锡林郭勒盟</item>
        <item>阿拉善盟</item>
    </string-array>
    <string-array name="liaoning_province_item">
        <item>沈阳</item>
        <item>大连</item>
        <item>鞍山</item>
        <item>抚顺</item>
        <item>本溪</item>
        <item>丹东</item>
        <item>锦州</item>
        <item>营口</item>
        <item>阜新</item>
        <item>辽阳</item>
        <item>盘锦</item>
        <item>铁岭</item>
        <item>朝阳</item>
        <item>葫芦岛</item>
    </string-array>
    <string-array name="jilin_province_item">
        <item>长春</item>
        <item>吉林</item>
        <item>四平</item>
        <item>辽源</item>
        <item>通化</item>
        <item>白山</item>
        <item>松原</item>
        <item>白城</item>
        <item>延边</item>
    </string-array>
    <string-array name="heilongjiang_province_item">
        <item>哈尔滨</item>
        <item>齐齐哈尔</item>
        <item>鸡西</item>
        <item>鹤岗</item>
        <item>双鸭山</item>
        <item>大庆</item>
        <item>伊春</item>
        <item>佳木斯</item>
        <item>七台河</item>
        <item>牡丹江</item>
        <item>黑河</item>
        <item>绥化</item>
        <item>大兴安岭</item>
    </string-array>
    <string-array name="shanghai_province_item">
        <item>上海</item>
    </string-array>
    <string-array name="jiangsu_province_item">
        <item>南京</item>
        <item>无锡</item>
        <item>徐州</item>
        <item>常州</item>
        <item>苏州</item>
        <item>南通</item>
        <item>连云港</item>
        <item>淮安</item>
        <item>盐城</item>
        <item>扬州</item>
        <item>镇江</item>
        <item>泰州</item>
        <item>宿迁</item>
    </string-array>
    <string-array name="zhejiang_province_item">
        <item>杭州</item>
        <item>宁波</item>
        <item>温州</item>
        <item>嘉兴</item>
        <item>湖州</item>
        <item>绍兴</item>
        <item>金华</item>
        <item>衢州</item>
        <item>舟山</item>
        <item>台州</item>
        <item>丽水</item>
    </string-array>
    <string-array name="anhui_province_item">
        <item>合肥</item>
        <item>芜湖</item>
        <item>蚌埠</item>
        <item>淮南</item>
        <item>马鞍山</item>
        <item>淮北</item>
        <item>铜陵</item>
        <item>安庆</item>
        <item>黄山</item>
        <item>滁州</item>
        <item>阜阳</item>
        <item>宿州</item>
        <item>巢湖</item>
        <item>六安</item>
        <item>亳州</item>
        <item>池州</item>
        <item>宣城</item>
    </string-array>
    <string-array name="fujian_province_item">
        <item>福州</item>
        <item>厦门</item>
        <item>莆田</item>
        <item>三明</item>
        <item>泉州</item>
        <item>漳州</item>
        <item>南平</item>
        <item>龙岩</item>
        <item>宁德</item>
    </string-array>
    <string-array name="jiangxi_province_item">
        <item>南昌</item>
        <item>景德镇</item>
        <item>萍乡</item>
        <item>九江</item>
        <item>新余</item>
        <item>鹰潭</item>
        <item>赣州</item>
        <item>吉安</item>
        <item>宜春</item>
        <item>抚州</item>
        <item>上饶</item>
    </string-array>
    <string-array name="shandong_province_item">
        <item>济南</item>
        <item>青岛</item>
        <item>淄博</item>
        <item>枣庄</item>
        <item>东营</item>
        <item>烟台</item>
        <item>潍坊</item>
        <item>济宁</item>
        <item>泰安</item>
        <item>威海</item>
        <item>日照</item>
        <item>莱芜</item>
        <item>临沂</item>
        <item>德州</item>
        <item>聊城</item>
        <item>滨州</item>
        <item>荷泽</item>
    </string-array>
    <string-array name="henan_province_item">
        <item>郑州</item>
        <item>开封</item>
        <item>洛阳</item>
        <item>平顶山</item>
        <item>安阳</item>
        <item>鹤壁</item>
        <item>新乡</item>
        <item>焦作</item>
        <item>濮阳</item>
        <item>许昌</item>
        <item>漯河</item>
        <item>三门峡</item>
        <item>南阳</item>
        <item>商丘</item>
        <item>信阳</item>
        <item>周口</item>
        <item>驻马店</item>
    </string-array>
</resources>