<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/my_action_cotent">

    <TextView 
        android:layout_marginLeft="10dp"
        android:id="@+id/more_text1"
        android:layout_centerVertical="true"
        style="@style/my_action_cotent"
        android:text="@string/more_text_font"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:id="@+id/radioGroup1">

        <RadioButton
            style="@style/radiobutton"
            android:id="@+id/radio0"
            android:checked="true"
            android:text="@string/radio_font_size_l"/>
        <RadioButton
            style="@style/radiobutton"
            android:id="@+id/radio1"
            android:text="@string/radio_font_size_n"/>
		<RadioButton
            style="@style/radiobutton"
            android:id="@+id/radio2"
            android:text="@string/radio_font_size_b"/>
    </RadioGroup>

</RelativeLayout>