<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gery" >

    <include
        android:id="@+id/my_edit_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/back_duanzi" />

    <RelativeLayout
        android:id="@+id/my_edit_icon"
        style="@style/my_edit"
        android:layout_below="@+id/my_edit_top" >

        <TextView
            android:textSize="@dimen/ts_20"
            android:id="@+id/my_edit_icon_text"
            style="@style/my_edit_text"
            android:layout_centerVertical="true"
            android:text="@string/my_icon" />

        <ImageView
            android:src="@drawable/testimage2"
            	android:padding="@dimen/margin_5"
            android:layout_centerVertical="true"
            android:id="@+id/my_edit_icon_image"
            android:layout_width="77dp"
            android:layout_height="77dp"
            android:layout_toRightOf="@+id/my_edit_icon_text" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:id="@+id/my_edit_name"
        style="@style/my_edit"
        android:layout_below="@+id/my_edit_icon" >

        <TextView
            android:id="@+id/my_edit_name_left"
            style="@style/my_edit_text"
            android:text="@string/my_name" />

        <TextView
            style="@style/my_edit_text"
            android:id="@+id/my_edit_name_right"
            android:layout_toRightOf="@+id/my_edit_name_left"
            android:text="我是姓名"
            android:textColor="@color/green" />
    </RelativeLayout>
    
    <View 
        android:id="@+id/my_edit_line"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/my_edit_name"/>

    <RelativeLayout
        android:layout_marginTop="0dp"
        android:id="@+id/my_edit_Signature"
        style="@style/my_edit"
        android:layout_below="@+id/my_edit_line" >

        <TextView
            android:id="@+id/my_edit_Signature_left"
            style="@style/my_edit_text"
            android:text="@string/my_signature" />

        <TextView
            style="@style/my_edit_text"
            android:id="@+id/my_edit_Signature_right"
            android:layout_toRightOf="@+id/my_edit_Signature_left"
            android:text="我是签名"
            android:textColor="@color/green" />
    </RelativeLayout>

</RelativeLayout>