<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fbfbfb">

	<LinearLayout 
	    android:background="@color/ghostwhite"
    android:id="@+id/tab_container"
    android:layout_width="fill_parent"
    android:layout_height="72.0dip"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal" >

    <RelativeLayout
        android:id="@id/channel1"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="4.0dip"
        android:layout_marginLeft="2.0dip"
        android:layout_marginRight="2.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_weight="1.0"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_duanzi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dip"
            android:layout_centerHorizontal="true"
            android:src="@drawable/mai_5_dz" />

        <TextView
            android:id="@+id/tv_duanzi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5.0dip"
            android:text="@string/tab_bar_duanzi"
            android:textColor="@color/XYF_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/channel2"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="4.0dip"
        android:layout_marginLeft="2.0dip"
        android:layout_marginRight="2.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_weight="1.0"
        android:orientation="vertical" >

        <ImageView
            android:layout_marginTop="5dip"
            android:id="@+id/iv_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/mai_4_img" />

        <TextView
            android:id="@+id/tv_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5.0dip"
            android:text="@string/tab_bar_image"
           android:textColor="@color/XYF_color" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginLeft="2.0dip"
        android:layout_marginRight="2.0dip"
        android:id="@id/channel3"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="1.0"
        android:orientation="vertical" >

        <ImageView
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_5"
            android:id="@+id/iv_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/write_click" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="6.0dip"
            android:layout_marginTop="3.0dip"
            android:textColor="@color/TextColor_bottom" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/channel4"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="4.0dip"
        android:layout_marginLeft="2.0dip"
        android:layout_marginRight="2.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_weight="1.0"
        android:orientation="vertical" >

        <ImageView
            android:layout_marginTop="5dip"
            android:id="@+id/iv_my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/mai_2_my" />

        <TextView
            android:id="@+id/tv_my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5.0dip"
            android:text="@string/tab_bar_mine"
            android:textColor="@color/XYF_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/channel5"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="4.0dip"
        android:layout_marginLeft="2.0dip"
        android:layout_marginRight="2.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_weight="1.0"
        android:orientation="vertical" >

        <ImageView
            android:layout_marginTop="5dip"
            android:id="@+id/iv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/mai_2_setting_2" />

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5.0dip"
            android:text="@string/tab_bar_more"
            android:textColor="@color/XYF_color" />
    </RelativeLayout>

</LinearLayout>

    <LinearLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tab_container"
        android:orientation="vertical" >
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/content_container2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    </LinearLayout>


</RelativeLayout>